[EMMA-111] Lookup service - In model-form.js fixed setOriginalValues() to use .valid fields (rather   than skipping .invalid fields). - In lookup-modal.js changed resetEntries() to invoke new   refreshOriginalValuesEntry() method to ensure that the ORIGINAL row gets   the current field values from the submission form. - Changed selectEntry() to hide the "loading icon" if the user starts to   interact with the lookup table rows. - Made dc_identifier columns "word-break: break-all" so that DOIs are   displayed without unexpected gaps.

--- a/app/assets/stylesheets/controllers/_entry.scss
+++ b/app/assets/stylesheets/controllers/_entry.scss
@@ -1016,6 +1016,10 @@ $lookup-accent-bg: lighter($uva-accent-orange, 50%);
                     .tag {              // .col-1
                         font-weight:    bold;
                     }
+
+                    [data-field="dc_identifier"] {
+                        word-break: break-all;
+                    }
                 }
 
                 //=============================================================
